--- a/package.json
+++ b/package.json
@@ -13,10 +13,15 @@
     "axios": "^1.7.7",
     "date-fns": "^4.1.0",
     "expo": "~51.0.28",
+    "expo-barcode-scanner": "~13.0.1",
+    "expo-camera": "~15.0.16",
     "expo-font": "^12.0.10",
     "expo-status-bar": "~1.12.1",
     "react": "18.2.0",
     "react-native": "0.74.5",
+    "react-native-camera": "^4.2.1",
+    "react-native-permissions": "^5.1.0",
+    "react-native-qrcode-scanner": "^1.5.5",
     "react-native-safe-area-context": "^4.14.0",
     "styled-components": "^6.1.13"
   },
