--- a/package.json
+++ b/package.json
@@ -19,16 +19,15 @@
     "expo-status-bar": "~1.12.1",
     "react": "18.2.0",
     "react-native": "0.74.5",
-    "react-native-camera": "^4.2.1",
     "react-native-permissions": "^5.1.0",
     "react-native-qrcode-scanner": "^1.5.5",
-    "react-native-safe-area-context": "^4.14.0",
+    "react-native-safe-area-context": "4.10.5",
     "styled-components": "^6.1.13"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
     "@types/react": "~18.2.45",
-    "typescript": "^5.1.3"
+    "typescript": "~5.3.3"
   },
   "private": true
 }
